# zinovia-fans

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  package-lock.json  package.json  video-script-youtube.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: celery_client.py  health.py  main.py
apps/api/app/core/: __init__.py  errors.py  logging.py  request_id.py  settings.py
apps/api/app/crypto/: encryption.py
apps/api/app/db/: __init__.py  metadata.py  mixins.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/modules/admin/: router.py  schemas.py  service.py
apps/api/app/modules/ai/: __init__.py  brand_router.py  models.py  prompt_builder.py  router.py  schemas.py  service.py
apps/api/app/modules/ai_safety/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/ai_tools/: models.py  promo_engine.py  router.py  schemas.py  service.py  tool_models.py  tool_router.py  tool_schemas.py  tool_service.py  translation_models.py  translation_router.py  translation_schemas.py  translation_service.py
apps/api/app/modules/audit/: models.py  service.py
apps/api/app/modules/auth/: constants.py  deps.py  models.py  password_reset.py  rate_limit.py  router.py  schemas.py  security.py  service.py
apps/api/app/modules/billing/: __init__.py  ccbill_client.py  constants.py  models.py  router.py  schemas.py  service.py  webhook_alias_router.py  worldline_client.py
apps/api/app/modules/collections/: models.py  (+3 more)
apps/api/app/shared/: __init__.py  pagination.py
apps/api/app/tools/: __init__.py  export_openapi.py  print_subscriptions.py  reset_db.py  seed_data.py
apps/api/tests/: conftest.py  test_ai.py  test_auth.py  test_billing.py  test_collections.py  test_creators.py  test_health.py  test_mail_retry.py  test_media.py  test_motion_transfer.py  test_onboarding.py  test_phase1_engagement.py  test_posts.py  test_ppv_message_unlocks.py  test_security.py
apps/worker/: pyproject.toml
apps/worker/assets/fonts/: README.md
apps/worker/tests/: test_media_tasks.py  test_motion_transfer.py  test_video_poster.py  test_watermark.py
apps/worker/worker/: celery_app.py  storage_io.py  watermark.py
apps/worker/worker/ml/: caption_cpu_runner.py  model_loader.py  tryon_cpu_runner.py
apps/worker/worker/tasks/: __init__.py  admin_email.py  ai.py  ai_safety.py  ai_tools.py  billing.py  media.py  motion_transfer.py  notifications.py  onboarding_emails.py  posts.py  translation.py
(+608 files in other folders)
