[project]
name = "zinovia-api"
version = "0.1.0"
description = "Zinovia Fans API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "email-validator>=2.1.1",
  "pydantic-settings>=2.2.0",
  "python-json-logger>=2.0.7",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "minio>=7.2.0",
  "boto3>=1.34.0",
  "stripe>=10.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-redis>=4.6.0.20241001",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["app/db/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is correct
    "B904",  # raise from err; can enable when codebase is updated
    "E501",  # Line length
    "E402",  # Module import not at top (logger pattern)
    "F401",  # Unused imports
    "F841",  # Unused variable
    "I001",  # Import order
    "UP017",  # datetime.UTC alias
    "UP037",  # Quoted type annotations (forward refs)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = ["app/db/migrations"]

[[tool.mypy.overrides]]
module = ["minio", "stripe", "pythonjsonlogger", "argon2", "boto3", "botocore", "botocore.config", "celery", "jose"]
ignore_missing_imports = true
