[project]
name = "zinovia-worker"
version = "0.1.0"
description = "Zinovia Fans worker"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.0",
  "pillow>=10.4.0",
  "boto3>=1.34.0",
  "blurhash-python>=1.1.0",
  "opencv-python-headless>=4.9.0",
  "replicate>=1.0.0",
  "httpx>=0.27.0",
  "transformers>=4.44.0,<4.50",
  "torch>=2.2.0,<2.6",
  "sentence-transformers>=3.0.0,<4.0",
  "argostranslate>=1.9.0",
  "rembg>=2.0.50",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
